Fix the svg charts from cutting off at 300px. Removal of the nvd3.css code that contained the global svg css rule: display:block; width:100%; caused this.

--- a/modules/enterprise/gui/coregui/src/main/webapp/css/charts.css
+++ b/modules/enterprise/gui/coregui/src/main/webapp/css/charts.css
@@ -6,6 +6,21 @@
  *
  */
 
+svg {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    /* Trying to get SVG to act like a greedy block in all browsers */
+    display: block;
+    width:100%;
+    height:100%;
+}
+
+
+
 .axis path, .axis line {
     fill: none;
     stroke: #000;
